# pallet-fixtures

./: Cargo.toml  README.md  procs-substrate-mod.md
helpers/util/: Cargo.toml
helpers/util/src/: catalog.rs  lib.rs  shipment.rs
pallets/basic-token/: Cargo.toml
pallets/basic-token/src/: lib.rs  tests.rs
pallets/cookie-map/: Cargo.toml
pallets/cookie-map/src/: lib.rs  tests.rs
pallets/cookies/: Cargo.toml
pallets/cookies/src/: tests.rs
pallets/delegator/: Cargo.toml
pallets/delegator/src/procs/: tests.rs
pallets/map-set/: Cargo.toml
pallets/plain/: Cargo.toml
pallets/plain/src/: tests.rs
pallets/simple-map/: Cargo.toml
pallets/simple-map/src/: lib.rs  tests.rs
pallets/tracks/: Cargo.toml
pallets/tracks/src/: lib.rs  tests.rs
traits/account-set/: Cargo.toml
traits/account-set/src/: lib.rs  util.rs
