[workspace]
members = [
	"pallets/vec-set",
	"pallets/check-membership",
    "pallets/simple-map",
    "pallets/basic-token",
    "pallets/map-set",
    "pallets/pallet-nft",
    "pallets/cookie-map",
    "pallets/plain",
    "pallets/cookies",
    "pallets/delegator",
	"pallets/tracks",
    "traits/account-set",
	"helpers/util",
]

