[package]
name = "tracks"
version = "2.0.0-rc6"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates Substrate's storage maps"

[package.metadata.substrate]
categories = [
    "pallet",
    "tutorial",
    "recipe",
]
compatibility_version = "2.0.0-rc6"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    "timestamp/std",
    'account-set/std',
    "bluefn-util/std",
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '2.0.0-rc6', default-features = false }
frame-system = { version = '2.0.0-rc6', default-features = false }
sp-runtime = { version = '2.0.0-rc6', default-features = false }
sp-std = { version = '2.0.0-rc6', default-features = false }
timestamp = { package = 'pallet-timestamp', version = '2.0.0-rc6', default-features = false }
account-set = { path = '../../traits/account-set', default-features = false }
bluefn-util = { path = '../../helpers/util', default-features = false }

[dev-dependencies.hex]
default_features = false
package = 'hex'
version = '0.4.2'

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"
tag = "v0.5.4+sub_v0.1"
version = "0.5.4"

[dev-dependencies]
sp-core = { version = '2.0.0-rc6', default-features = false }
sp-io = { version = '2.0.0-rc6', default-features = false }
